#0036, #0037 Δημιουργηθηκε razor σελιδα για την εμφανιση των περιοχων και για τη φορμα για τη προσθηκη νεας περιοχης. Δημιουργηθηκε controller operation και post για να κανει consume το api

--- a/peripatoiCrud.API/Peripatoi.UI/Views/Perioxes/Index.cshtml
+++ b/peripatoiCrud.API/Peripatoi.UI/Views/Perioxes/Index.cshtml
@@ -5,6 +5,10 @@
 
 <h1 class="mt-3"Περιοχές</h1>
 
+<div class ="d-flex justify-content-end">
+    <a class="btn btn-secondary" asp-controller="Perioxes" asp-action="Prosthiki"> Προσθήκη νέας περιοχής </a>
+</div>
+
 <table class="table table-bordered">
 
     <thead>
