#0036, #0037 Δημιουργηθηκε σελιδα επεξεργασιας περιοχης και controller και αξιοποιηθηκε το put api endpoint, προστεθηκε κουμπι επεξεργασιας για ανοιγμα edit οθονης στην αρχικη οθονη περιοχων.

--- a/peripatoiCrud.API/Peripatoi.UI/Views/Perioxes/Index.cshtml
+++ b/peripatoiCrud.API/Peripatoi.UI/Views/Perioxes/Index.cshtml
@@ -16,16 +16,20 @@
             <th>Id</th>
             <th>Κωδικός</th>
             <th>Όνομα</th>
+            <th> </th>
         </tr>
     </thead>
 
     <tbody>
-        @foreach (var peripatos in Model)
+        @foreach (var perioxh in Model)
     {
         <tr>
-            <td>@peripatos.Id</td>
-            <td>@peripatos.Kwdikos</td>
-            <td>@peripatos.Onoma</td>
+                <td>@perioxh.Id</td>
+                <td>@perioxh.Kwdikos</td>
+                <td>@perioxh.Onoma</td>
+            <td>
+                    <a asp-controller="Perioxes" asp-action="Epeksergasia" asp-route-id="@perioxh.Id" class=" btn btn-light"> Επεξεργασία </a>
+            </td>
         </tr>
     }
     </tbody>
