#0036, #0037 Δημιουργηθηκε κουμπι διαγραφης περιοχης και μεθοδος διαγραφης περιοχης

--- a/peripatoiCrud.API/Peripatoi.UI/Views/Perioxes/Epeksergasia.cshtml
+++ b/peripatoiCrud.API/Peripatoi.UI/Views/Perioxes/Epeksergasia.cshtml
@@ -33,5 +33,9 @@
             <button type="submit" class="btn btn-primary">Αποθήκευση Αλλαγών</button>
         </div>
 
+        <div class="mt-3 d-flex justify-content-between">
+            <button type="submit" asp-controller="Perioxes" asp-action="Diagrafh" class="btn btn-danger">Οριστική Διαγραφή Περιοχής</button>
+        </div>
+
     </form>
 }
