#0039 Οπτική βελτίωση του UI

--- a/peripatoiCrud.API/Peripatoi.UI/Views/Peripatoi/Prosthiki.cshtml
+++ b/peripatoiCrud.API/Peripatoi.UI/Views/Peripatoi/Prosthiki.cshtml
@@ -8,9 +8,9 @@
         <input type="text" class="form-control" asp-for="Onoma" />
     </div>
 
-    <div class="mt-3">
+    <div class="mb-3">
         <label class="form-label">Περιγραφή</label>
-        <input type="text" class="form-control" asp-for="Perigrafh" />
+        <textarea class="form-control" asp-for="Perigrafh" rows="6"></textarea>
     </div>
 
     <div class="mt-3">
